--- a/src/options/style.css
+++ b/src/options/style.css
@@ -22,18 +22,40 @@
   font-display: swap;
   font-family: 'DM Sans';
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   src: url('../../assets/fonts/dm-sans-regular.woff2') format('woff2');
 }
 
-:root {
-  --feature-color: #0075ff;
+@font-face {
+  font-display: swap;
+  font-family: 'DM Sans';
+  font-style: italic;
+  font-weight: 400;
+  src: url('../../assets/fonts/dm-sans-regular-italic.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../../assets/fonts/dm-sans-bold.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'DM Sans';
+  font-style: italic;
+  font-weight: 700;
+  src: url('../../assets/fonts/dm-sans-bold-italic.woff2') format('woff2');
 }
 
 :focus-visible {
   outline: 2px solid currentColor;
   outline-offset: 1px;
+  border-radius: 2px;
 }
+
 .v-enter-active,
 .v-leave-active {
   transition: opacity 0.5s ease;
