--- a/src/options/style.css
+++ b/src/options/style.css
@@ -6,7 +6,7 @@
   font-display: swap;
   font-family: 'DM Sans';
   font-style: normal;
-  font-weight: 400;
+  font-weight: normal;
   src: url('../../assets/fonts/dm-sans-regular.woff2') format('woff2');
 }
 
@@ -14,6 +14,22 @@
   font-display: swap;
   font-family: 'DM Sans';
   font-style: normal;
-  font-weight: 700;
+  font-weight: bold;
   src: url('../../assets/fonts/dm-sans-bold.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'JetBrains Mono';
+  font-style: normal;
+  font-weight: normal;
+  src: url('../../assets/fonts/jetbrains-mono-regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'JetBrains Mono';
+  font-style: normal;
+  font-weight: bold;
+  src: url('../../assets/fonts/jetbrains-mono-bold.woff2') format('woff2');
 }
