feat: complete ctxMenu and shortcut i18n (#129)
* feat: split i18n files using dynamic import to reduce bundle size

* feat: complete ctxMenu and shortcut i18n

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,39 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:focus-visible {
+  border-radius: 0.25rem;
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: normal;
+  src: url('./fonts/dm-sans-regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: bold;
+  src: url('./fonts/dm-sans-bold.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'JetBrains Mono';
+  font-style: normal;
+  font-weight: normal;
+  src: url('./fonts/jetbrains-mono-regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'JetBrains Mono';
+  font-style: normal;
+  font-weight: bold;
+  src: url('./fonts/jetbrains-mono-bold.woff2') format('woff2');
+}
