--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@
   font-display: swap;
   font-family: 'DM Sans';
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   src: url('./fonts/dm-sans-regular.woff2') format('woff2');
 }
 
@@ -18,7 +18,15 @@
   font-display: swap;
   font-family: 'DM Sans';
   font-style: normal;
-  font-weight: bold;
+  font-weight: 600;
+  src: url('./fonts/dm-sans-semibold.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
   src: url('./fonts/dm-sans-bold.woff2') format('woff2');
 }
 
@@ -26,7 +34,7 @@
   font-display: swap;
   font-family: 'JetBrains Mono';
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   src: url('./fonts/jetbrains-mono-regular.woff2') format('woff2');
 }
 
@@ -34,6 +42,6 @@
   font-display: swap;
   font-family: 'JetBrains Mono';
   font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   src: url('./fonts/jetbrains-mono-bold.woff2') format('woff2');
 }
