--- a/assets/style.css
+++ b/assets/style.css
@@ -8,40 +8,40 @@
 
 @font-face {
   font-display: swap;
-  font-family: 'DM Sans';
+  font-family: "DM Sans";
   font-style: normal;
   font-weight: 400;
-  src: url('./fonts/dm-sans-regular.woff2') format('woff2');
+  src: url("./fonts/dm-sans-regular.woff2") format("woff2");
 }
 
 @font-face {
   font-display: swap;
-  font-family: 'DM Sans';
+  font-family: "DM Sans";
   font-style: normal;
   font-weight: 600;
-  src: url('./fonts/dm-sans-semibold.woff2') format('woff2');
+  src: url("./fonts/dm-sans-semibold.woff2") format("woff2");
 }
 
 @font-face {
   font-display: swap;
-  font-family: 'DM Sans';
+  font-family: "DM Sans";
   font-style: normal;
   font-weight: 700;
-  src: url('./fonts/dm-sans-bold.woff2') format('woff2');
+  src: url("./fonts/dm-sans-bold.woff2") format("woff2");
 }
 
 @font-face {
   font-display: swap;
-  font-family: 'JetBrains Mono';
+  font-family: "JetBrains Mono";
   font-style: normal;
   font-weight: 400;
-  src: url('./fonts/jetbrains-mono-regular.woff2') format('woff2');
+  src: url("./fonts/jetbrains-mono-regular.woff2") format("woff2");
 }
 
 @font-face {
   font-display: swap;
-  font-family: 'JetBrains Mono';
+  font-family: "JetBrains Mono";
   font-style: normal;
   font-weight: 700;
-  src: url('./fonts/jetbrains-mono-bold.woff2') format('woff2');
+  src: url("./fonts/jetbrains-mono-bold.woff2") format("woff2");
 }
