fix(website): card opacity is 1 when the first screen is loaded (#292)

--- a/website/app/assets/style.css
+++ b/website/app/assets/style.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@property --welcome-x {
+  syntax: "<number>";
+  initial-value: 0.5;
+  inherits: false;
+}
+
+@property --welcome-y {
+  syntax: "<number>";
+  initial-value: 0.5;
+  inherits: false;
+}
+@property --welcome-deg {
+  syntax: "<number>";
+  initial-value: 0;
+  inherits: false;
+}
+@property --welcome-radius {
+  syntax: "<number>";
+  initial-value: 0;
+  inherits: false;
+}
