--- a/apps/extension/src/tailwind.css
+++ b/apps/extension/src/tailwind.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import "tailwindcss" source("../src");
 @plugin '@tailwindcss/forms';
 @plugin '@headlessui/tailwindcss';
 @plugin '@tailwindcss/typography';
